2010-03-07	TAG CVS Release_4_4_0

2010-03-06  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* INSTALL config/makefile.mgw config/makefile.cyg:
	Consolidate the instructions for building using mgw and cygwin into
	their respective makefiles.

2010-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Both curves in 'with filledcurves' must
	use the same y axis properties.
	Bug #2941257

	* src/util.c configure.in config/config.cyg config/config.dj2
	config/config.mgw config/config.ntconfig/config.os2 config/config.oww:
	Remove the test for pwd.h, the configuration flag HAVE_PWD_H, and the
	conditional code that copies GECOS information from the password file
	into the header of PostScript and PDF output files.  This addresses
	reported issues of privacy and reported problems with building a static
	executable.

2010-03-05  Christoph Junghans (ottxor)

	* src/Makefile.am:  Fix broken target "make clean"

2010-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am: Add gnuplot.cfg to EXTRA_DIST

	* share/Makefile.am INSTALL NEWS:  Give up on figuring out where
	an x11 app-defaults files should be installed.  Place ours in 
	${PREFIX}/share/gnuplot/4.4/app-defaults and put a note in INSTALL
	that it should be copied to an appropriate system directory.

2010-03-04  Thomas Sefzick <thse@users.sourceforge.net>

	* src/svg.trm:  Make sure to reset ENHsvg_string_state after each use.

2010-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm:  Remove requirement that the 'size' option must be the
	last option given.

2010-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (check_for_variable_color) plot3d.c (get_3ddata)
	plot3d.c (plot3d_impulses plot3d_lines plot3d_points):
	The presence of variable color was being tracked by a shared variable,
	rgb_from_column, but it was not being updated in some circumstances.
	Get rid of the variable and test the plot header directly when needed.
