@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.24.2.3 2010/03/05 06:52:24 sfeam Exp $
+% $Id: titlepag.tex,v 1.24.2.4 2010/03/09 00:28:50 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -37,8 +37,7 @@
   \makeindex
 
   % These are only needed if you want to embed figures
-  \usepackage{graphicx}
-  \usepackage{picins}
+  \include{pdffigures}
 
 \fi
 
